# music-exam

./: amplitudes.ipynb  fifth.ipynb  play.ipynb  pyproject.toml
music_synth/: __init__.py  synth.py
