[project]
name = "music-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.15",
]
